--- a/多语言支持04加数据模型.csproj
+++ b/多语言支持04加数据模型.csproj
@@ -46,7 +46,9 @@
     <Compile Include="InfoHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLHelper.cs" />
     <Compile Include="UserT1Model.cs" />
+    <Compile Include="UserT1Operation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
